# nasa_r2_common

./: README.md
nasa_r2_common/: CMakeLists.txt  package.xml
nasa_r2_common_msgs/: CMakeLists.txt  manifest.xml  package.xml  setup.py
nasa_r2_common_msgs/msg/: BmsCharge.msg  BmsConfig.msg  BmsLimit.msg  BmsLimitCounter.msg  BmsManual.msg  BmsMax.msg  BmsSlave.msg  BmsStatus.msg  GetParameterResponse.msg  GripperEnvironment.msg  GripperPositionCommand.msg  GripperPositionState.msg  GuardDog.msg  IoChannels.msg  IoStats.msg  JointCapability.msg  MStopState.msg  MagnitudeArray.msg  MemoryRegion16.msg  NodeRegisterData.msg  NodeRegisterDataArray.msg  PowerCommand.msg  PowerState.msg  ToolFrame.msg
nasa_r2_common_msgs/proto/: ProbeMsgs.proto  RTCRemoteMsgs.proto
nasa_r2_common_msgs/src/: RosMsgPrinter.cpp
nasa_r2_common_msgs/src/nasa_r2_common_msgs/: __init__.py
nasa_r2_common_msgs/srv/: BmsSetLogRate.srv  GetDouble.srv  GetLiveParameter.srv  HasDouble.srv  Heartbeat.srv  MStop.srv  SendString.srv  Servo.srv  SetControlValue.srv  SetDouble.srv  SetIp.srv  SetLiveParameter.srv  SetWrenchLimit.srv
r2_action_server/: CMakeLists.txt  package.xml
r2_action_server/config/: head_joints.yaml  l_arm_joints.yaml  l_hand_joints.yaml  r_arm_joints.yaml  r_hand_joints.yaml  waist_joints  waist_joints.yaml
r2_action_server/launch/: r2_upperbody.launch
r2_action_server/src/: r2_action_server.cpp
r2_control/nodes/: r2_fullbody_ready_pose.py  r2_ready_pose.py  r2_ready_pose_high.py
r2_description/: CMakeLists.txt  package.xml
r2_description/cmake/: r2-extras.cmake.em
r2_description/launch/: r2_display.rviz  r2_rviz.launch
r2_description/robots/: r2.display.urdf.xacro  r2.display.urdf.xml  r2.sim.urdf.xacro  r2.sim.urdf.xml  r2.urdf.xacro  r2.urdf.xml  r2_fullbody.urdf.xml  r2_fullbody_no_world.urdf.xacro  r2_fullbody_no_world.urdf.xml  r2_legs.urdf.xacro  r2_orocos.sim.urdf.xacro  r2_orocos.sim.urdf.xml  r2c.urdf.xacro  r2c_full_body.sim.urdf.xacro  r2c_full_body.urdf.xacro  r2c_full_body_ISS.sim.urdf.xacro  r2c_full_body_ISS.sim.urdf.xml  r2c_legs.display.urdf.xacro  r2c_legs.sim.urdf.xacro  r2c_legs_control.urdf.xacro  r2c_sim_full_control.urdf.xacro  r2c_sim_full_dynamics.urdf.xacro  r2c_torso.sim.urdf.xacro  r2c_torso.sim.urdf.xml  r2c_upper_body.urdf.xacro
r2_description/robots/xacro/r2_common/: r2.base.xacro  r2.common.xacro  r2.world.xacro  r2c_legs.stand.xacro
r2_description/robots/xacro/r2_upperbody/: r2c.head_sensors.xacro  r2c.left_arm.xacro  r2c.left_forearm.xacro  r2c.left_hand.xacro  r2c.left_hand_passive.xacro  r2c.right_arm.xacro  r2c.right_forearm.xacro  r2c.right_hand.xacro  r2c.right_hand_passive.xacro
r2_description/urdf/: r2.body.xacro  r2.gazebo.xacro  r2.head.xacro  r2.left_arm.xacro  r2.left_hand.xacro  r2.right_arm.xacro  r2.right_hand.xacro  r2c_full_body.controller.xacro  r2c_legs.gazebo.xacro  taskboard.lower.xacro  taskboard.urdf.xacro  taskboard_B01.urdf.xacro  taskboard_B05.urdf.xacro
r2_description/urdf/gazebo_plugins/: gazebo_interface.xacro  r2.gazebo.controller.xacro  r2.transmissions.xacro  taskboard.panel_a.controller.xacro
r2_description/urdf/models/: r2.body.xacro  r2.left_arm.xacro  r2.left_hand.xacro  r2.right_arm.xacro  r2c_full_body_no_world.urdf.xacro  r2c_legs.urdf.xacro  r2c_upper_body.urdf.xacro  r2c_upper_body_stand.urdf.xacro
r2_description/urdf/r2c_legs/: r2_legs.left_foot.xacro  r2_legs.right_foot.xacro
r2_description/urdf/r2c_upperbody/: r2b.head_sensors.xacro  r2c.head_sensors.xacro  r2c.left_hand.xacro  r2c.right_hand.xacro
r2_description/urdf/sensors/: hokuyo_lx30_laser.urdf.xacro  r2.gazebo.sensors.xacro  r2c_legs.gazebo.sensors.xacro
r2_fullbody_moveit_config/: CMakeLists.txt
r2_fullbody_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  r2.srdf  r2_fullbody.srdf
r2_fullbody_moveit_config/launch/: moveit.rviz
r2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
r2_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kinematics_services.yaml  ompl_planning.yaml  r2.srdf
r2_moveit_config/launch/: craftsman.rviz  craftsman_move_group.launch  craftsman_moveit_rviz.launch  craftsman_planning_context.launch  craftsman_teleop.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  planning_context.launch  r2_moveit_controller_manager.launch  trajectory_execution.launch.xml
r2_teleop/: manifest.xml
r2_teleop/src/: r2_helper.py
r2_upperbody_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
r2_upperbody_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  r2.srdf
r2_upperbody_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  r2_moveit_controller_manager.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
