<?xml version="1.0"?>
<package>
  <name>nasa_r2_common</name>
  <version>1.1.0</version>
  <description>Core components of ROS/Robonaut2</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>BSD</license>
  <run_depend>nasa_r2_common_msgs</run_depend>
  <run_depend>r2_description</run_depend>
  <run_depend>r2_moveit_config</run_depend>
  <run_depend>r2_upperbody_moveit_config</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>

