<?xml version="1.0"?>
<package>
  <name>r2_description</name>
  <version>1.1.0</version>
  <description>This package contains the robot model files (urdf and xacro)</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>

  <export>
  </export>
</package>
