<?xml version="1.0"?>
<package>
  <name>r2_description</name>
  <version>0.0.0</version>
  <description>The r2_description package</description>


  <maintainer email="stephen.hart@nasa.gov">Stephen Hart</maintainer>
  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>


  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
